Update swagger and login endpoint
