# models/user.go
@@ -1,6 +1,7 @@
 package models
 
 type User struct {
-	Email    string `json:"email"`
-	Password string `json:"password"`
+	Email             string `json:"email"`
+	Password          string `json:"password"`
+	ReturnSecureToken string `json:"returnSecureToken" default:"true"`
 }
